Update model to match contents of import file
In light of seeing the file we will be using to load datasets, we needed
to make the following changes to the model:

* Add distribution IDs, which are supplied by the puiblisher
* Add optional fields to distribution
* Make "creator" a single, required value instead of an array

Additionally, I have split out the Dataset and DataService models so
they can be used for both request and response schemas.
