# api/app/main.py
@@ -47,9 +47,9 @@ def search_catalogue(
 async def catalogue_entry_detail(asset_id: UUID) -> m.AssetDetailResponse:
     asset = db.asset_detail(asset_id)
     if asset["type"] == "Dataset":
-        asset = m.Dataset.model_validate(asset)
+        asset = m.DatasetResponse.model_validate(asset)
     elif asset["type"] == "DataService":
-        asset = m.DataService.model_validate(asset)
+        asset = m.DataServiceResponse.model_validate(asset)
     else:
         raise HTTPException(status_code=404, detail="Item not found")
 
